tournament model and new form added

--- a/app/views/tournaments/new.html.erb
+++ b/app/views/tournaments/new.html.erb
@@ -1,1 +1,14 @@
 <h1>Create New Tournament</h1>
+
+<%= form_for @tournament do |tournament_form| %>
+
+  <div>
+    <%= tournament_form.label :name %>
+    <%= tournament_form.text_field :name %>
+  </div>
+
+  <div>
+    <%= tournament_form.submit "Submit" %>
+  </div>
+
+<% end %>
