--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -1,2 +1,16 @@
 <h1>Tournaments</h1>
 <%= link_to "Add tournament", new_tournament_path %>
+<br/>
+<br/>
+<% @tournaments.each do |tournament| %>
+  <%= tournament.name %>
+  <br/>
+  Status: <%= tournament.stage %>
+  <br/>
+  <%= link_to "Show", tournament_path(tournament) %>
+  <%= link_to "Edit", edit_tournament_path(tournament) %>
+  <%= button_to 'Delete', tournament, method: :delete,
+                form: {data: {turbo_confirm: 'Are you sure?'}} %>
+  <br/>
+  <br/>
+<% end %>
