--- a/app/views/tournaments/new.html.erb
+++ b/app/views/tournaments/new.html.erb
@@ -1,2 +1,12 @@
 <h1>Create New Tournament</h1>
-<%= render 'form' %>
+<%= form_for @tournament do |tournament_form| %>
+  <div>
+    <%= tournament_form.label 'Tournament Name' %>
+    <%= tournament_form.text_field :name %>
+  </div>
+  <br/>
+
+  <div>
+    <%= tournament_form.submit "Submit" %>
+  </div>
+<% end %>
