--- a/app/views/tournaments/edit.html.erb
+++ b/app/views/tournaments/edit.html.erb
@@ -1,3 +1,8 @@
 <h1><%= @tournament.name %></h1>
 <%= render 'form' %>
-<%= button_to "Create Random Teams", create_random_teams_tournament_path %>
+<% if @tournament.matches.empty? %>
+  <%= button_to "Create Random Teams", create_random_teams_tournament_path %>
+<% else %>
+  <%= button_to "Create Random Results for Division A", create_random_teams_tournament_path %>
+  <%= button_to "Create Random Results for Division B", create_random_teams_tournament_path %>
+<% end %>
