--- a/app/views/tournaments/_form.html.erb
+++ b/app/views/tournaments/_form.html.erb
@@ -1,8 +1,3 @@
-<% matches = @tournament.matches %>
-<% devision_matches = @tournament.matches.where.not(stage: 'playoff') if !matches.empty? %>
-<% devision_a_matches = @tournament.matches.where(stage: 'division_a').order(:created_at) if devision_matches %>
-<% devision_b_matches = @tournament.matches.where(stage: 'division_b').order(:created_at) if devision_matches %>
-
 <%= form_for @tournament do |tournament_form| %>
   <div>
     <%= tournament_form.label 'Tournament Name' %>
@@ -11,7 +6,7 @@
 
   <br/>
 
-  <% if !devision_matches %>
+  <% if !@division_matches %>
     <div>
       Teams:
     </div>
@@ -30,7 +25,7 @@
     </div>
     <div>
       <% index = 1 %>
-      <%= tournament_form.fields_for :matches, devision_a_matches do |match_fields| %>
+      <%= tournament_form.fields_for :matches, @division_a_matches do |match_fields| %>
         <%= index %>
         <%= render 'match_fields', f: match_fields %>
         <% index += 1 %>
@@ -43,7 +38,7 @@
     </div>
     <div>
       <% index = 1 %>
-      <%= tournament_form.fields_for :matches, devision_b_matches do |match_fields| %>
+      <%= tournament_form.fields_for :matches, @division_b_matches do |match_fields| %>
         <%= index %>
         <%= render 'match_fields', f: match_fields %>
         <% index += 1 %>
